# fastapi-solid

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  mongo.env.example  pyproject.toml
mongo-init/: create-app-user-example.js
secrets/: mongo-keyfile-example
src/fastapi_solid/: __init__.py  main.py
src/fastapi_solid/application/exceptions/: app_error.py
src/fastapi_solid/application/interfaces/players/: repo.py
src/fastapi_solid/application/interfaces/users/: repo.py
src/fastapi_solid/application/players/: dto.py  service.py
src/fastapi_solid/application/users/: dto.py  service.py
src/fastapi_solid/domain/player/: model.py  rules.py
src/fastapi_solid/domain/user/: model.py
src/fastapi_solid/infrastructure/alembic/: env.py
src/fastapi_solid/infrastructure/beanie/: __init__.py  uow.py
src/fastapi_solid/infrastructure/beanie/migrations/: 20251023030949_init.py  __init__.py
src/fastapi_solid/infrastructure/beanie/player/: model.py  repo.py
src/fastapi_solid/infrastructure/beanie/setup/: base_repo.py  client.py
src/fastapi_solid/infrastructure/di/: container.py
src/fastapi_solid/infrastructure/fastapi/: create_app.py  error_handler.py
src/fastapi_solid/infrastructure/redis/: cache.py
src/fastapi_solid/infrastructure/sqlalchemy/: __init__.py  uow.py
src/fastapi_solid/utils/config/: settings.py
src/fastapi_solid/utils/converters/: alch_to_dc.py  beanie_to_dc.py  json_to_dc.py
src/fastapi_solid/utils/logging/: logger.py
src/fastapi_solid/utils/meta/: singleton.py
(+9 files in other folders)
